# relic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert_pretrained_weights.py  patch_terminations.py  play_pretrained.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml  test.yml
scripts/: check_copyright.py
scripts/rsl_rl/: play.py  train.py  zero_agent.py
source/relic/: setup.py
source/relic/config/: extension.toml
source/relic/relic/: __init__.py
source/relic/relic/actuators/: __init__.py  actuator_spot.py  actuator_spot_cfg.py
source/relic/relic/assets/: __init__.py
source/relic/relic/assets/spot/: constants.py  spot.py
source/relic/relic/tasks/: __init__.py
source/relic/relic/tasks/loco_manipulation/: __init__.py  interlimb_env_cfg.py
source/relic/relic/tasks/loco_manipulation/config/: __init__.py
source/relic/relic/tasks/loco_manipulation/config/spot/: __init__.py  spot_env_cfg.py
source/relic/relic/tasks/loco_manipulation/config/spot/agents/: __init__.py  rsl_rl_cfg.py
source/relic/relic/tasks/loco_manipulation/mdp/: __init__.py  curriculums.py  event.py  observations.py  rewards.py  terminations.py
source/relic/relic/tasks/loco_manipulation/mdp/actions/: __init__.py  spot_actions_cfg.py  spot_joint_actions.py
source/relic/relic/tasks/loco_manipulation/mdp/commands/: arm_command.py  commands_cfg.py
